Mejora visual chat
se crea un ambiente mas amplio para el chat

--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -174,7 +174,10 @@ footer {
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
+  overflow-y: auto;
+  max-height: 500px;
+  max-height: calc(100% - 100px); /* Ajusta la altura máxima del contenedor del chat */
+     
  
 }
 
@@ -227,6 +230,8 @@ footer {
   padding: 15px;
   background-color: #f0f0f0;
   border-top: 1px solid #ccc;
+  overflow-y: auto;
+
 }
 
 .chat-input input[type="text"] {
@@ -289,6 +294,10 @@ footer {
   color: #fff;
   border: none;
   border-radius: 5px;
+}
+.seccion_7 {
+  max-height: 500px; /* Establece la altura máxima de la sección */
+  overflow-y: auto; /* Agrega una barra de desplazamiento vertical cuando sea necesario */
 }
 
 
