--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -140,6 +140,7 @@ footer {
   width: 110px; /* Ancho de cada imagen */
   height: 135px; /* Altura automática para mantener la proporción */
   margin-right: 10px; /* Espacio entre las imágenes */
+  border-radius: 30px; /* Añade un borde redondeado de 10px */
 }
 
 .imagen {
