--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -545,4 +545,29 @@ button:hover {
   height: auto;
   border-radius: 7px;
 }
+.texto-con-tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip {
+  visibility: hidden;
+  width: 200px;
+  background-color: #f5f5f5;
+  color: #333;
+  text-align: left;
+  border-radius: 5px;
+  padding: 10px;
+  position: absolute;
+  top: 20px;
+  left: 0;
+  z-index: 1;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.texto-con-tooltip:hover .tooltip {
+  visibility: visible;
+  opacity: 1;
+}
 
