--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -526,9 +526,10 @@ button:hover {
 .carrusel-container {
   width: 100%;
   overflow: hidden;
-  position: relative;
+  position: absolute;
   border-radius: 7px;
   padding: 5px;
+  display: flex;
 }
 
 .slide {
@@ -541,7 +542,7 @@ button:hover {
 }
 
 .slide img {
-  width: 100px;
+  width: 150px;
   height: auto;
   border-radius: 7px;
 }
@@ -552,7 +553,7 @@ button:hover {
 
 .tooltip {
   visibility: hidden;
-  width: 200px;
+  width: auto;
   background-color: #f5f5f5;
   color: #333;
   text-align: left;
@@ -564,10 +565,31 @@ button:hover {
   z-index: 1;
   opacity: 0;
   transition: opacity 0.3s;
+  overflow-y: auto; /* Agrega scroll vertical */
+  max-height: 150px; /* Altura máxima antes de aparecer el scroll */
 }
 
 .texto-con-tooltip:hover .tooltip {
   visibility: visible;
   opacity: 1;
 }
+.right{
+  text-align: center;
+  position: relative;
+  float:right;
+  margin-left: 20px;
+  display: block;
+}
+.texto-fuera {
+  font-size: 40px;
+  padding-left: 15%;
+  padding: 10px;
+  text-align:center;
+}
+.nos{
+  font-size: 30px;
+  padding-left: 15%;
+  padding: 10px;
+  text-align:center;
 
+}
